# CityDrain3

./: .gitignore  .travis.yml  CMakeLists.txt  Cd3CPack.txt  README  README.md  build.pri  cd3.pro  main.cpp  source-me.sh
app/: CMakeLists.txt  main.cpp
bench/: bench.py  benchjob.sh  compare-job.sh  dir2plot.py  gen-compare-imgs.sh  gen-paper-imgs.sh  mins.py  plot-compare-speedup.py  plot-compare.py  plot-speedup.py  plot.py  plotbench.gp  plotthree.sh  plotwall.gp  replot.py  speedup-table-tex.awk  speedup.awk  test-affinity.sh  timejob.sh  tospeedup.py
cd3core/: CMakeLists.txt  calculationunit.cpp  calculationunit.h  cd3assert.h  cd3core.pri  cd3core.pro  cd3globals.h  cd3typeinfo.h  cd3utils.h  controller.cpp  controller.h  cyclenodeend.cpp  cyclenodeend.h  defaultsimulation.cpp  defaultsimulation.h  flow.cpp  flow.h  flowbuffer.cpp  flowbuffer.h  flowfuns.cpp  flowfuns.h  log.cpp  log.h  logger.cpp  logger.h  mapbasedmodel.cpp  mapbasedmodel.h  model.cpp  model.h  modelserializer.cpp  modelserializer.h  node.cpp  node.h  nodeconnection.cpp  nodeconnection.h  nodefactory.h  noderegistry.cpp  noderegistry.h  saxloader.cpp  saxloader.h  (+13 more)
cd3core/qs/: qs.pri  qswcalcunit.h  qswflow.cpp  qswflow.h
doc/: Doxyfile
dtd/: model.dtd
loader/: loader.pri  typefactory.h  typeregistry.h  xmlloader.cpp  xmlloader.h
models/: Station_6620.ixx  cd3modelgen.py  complex.xml  gen-long-sewer.py  gen-parallel-model.py  gen-parallel-sewers.py  gen-tree-model.py  gencomplex.py  gencycle.py  ibk.kar  karen2cd3model.py  long-sewer-ordered.xml  long-sewer.xml  mixer-ordered.xml  mixer.xml  model2dot.py  par-10-4.xml  test-catchment.xml  test-controller.xml  test-cso.xml  test-cycle.xml  test-js.xml  test-ordered-sewer.xml  test-par.xml  test-par10.xml  test-par20.xml  test-par4.xml  test-pipe-sewer.xml  test-pipelined.xml  test-qjs.xml  test-rainread.xml  test-sewer-ordered.xml  test-sewer.xml  test-splitter.xml  test-state.xml  test-vardt.xml  test.xml  tree-2-ordered.xml  (+2 more)
nodes/: CMakeLists.txt  bufferednodeconnection.cpp  catchmentcss.cpp  catchmentcss.h  constsource.cpp  constsource.h  cso.cpp  cso.h  defaultsimulation.cpp  defaultsimulation.h  fileout.cpp  fileout.h  flowtypefactory.cpp  flowtypefactory.h  jsbindings.cpp  jsbindings.h  jsnode.cpp  jsnode.h  mixer.cpp  mixer.h  nodes.cpp  nodes.pri  nodes.pro  null.cpp  null.h  orderedpipesimulation.cpp  orderedpipesimulation.h  parallelsimulation.cpp  parallelsimulation.h  pipelinedsimulation.cpp  pipelinedsimulation.h  rainread.cpp  rainread.h  sewer.cpp  sewer.h  splitter.cpp  splitter.h  testnode.cpp  v8cppwrapper.h  vardtsimulation.cpp  (+1 more)
nodes/qs/: qs.pri  qswcalcunit.cpp  qswflow.cpp  qswflow.h  qswnode.cpp  qswnode.h  statemigrator.cpp  statemigrator.h
src/app/: CMakeLists.txt  app.pro  main.cpp  saxloader.cpp  saxloader.h
src/cd3core/: CMakeLists.txt  calculationunit.cpp  cd3assert.h  cd3core.pri  cd3core.pro  cd3globals.h  cd3typeinfo.h  cd3utils.h  controller.cpp  controller.h  cyclenodestart.cpp  flow.cpp  flow.h  flowbuffer.cpp  flowbuffer.h  flowdefinition.h  flowfuns.cpp  flowfuns.h  icontroller.h  imodel.h  log.cpp  log.h  logger.cpp  logger.h  logsink.cpp  logsink.h  mapbasedmodel.cpp  mapbasedmodel.h  model.h  modelserializer.cpp  modelserializer.h  node.cpp  node.h  nodeconnection.cpp  nodeconnection.h  nodefactory.h  noderegistry.cpp  noderegistry.h  pythoncontroller.cpp  pythoncontroller.h  (+16 more)
src/cd3core/python/: module.cpp  module.h  pythonnodefactory.cpp  pythonnodefactory.h
src/cd3core/qs/: qswcalcunit.cpp  qswcalcunit.h  qswflow.cpp  qswflow.h
src/dance4water/: CMakeLists.txt  cd3dance4water.cpp  household.cpp  household.h  storage.cpp  storage.h  stormwaterlink.cpp  stormwaterlink.h  vibedefaultsimulation.cpp  vibedefaultsimulation.h  vibemixer.cpp  vibemixer.h  vibesplitter.cpp  vibesplitter.h
src/gui/: CMakeLists.txt  aboutdialog.ui  autolayout.cpp  autolayout.h  connectiondialog.ui  connectionitem.cpp  connectionitem.h  findnodedialog.cpp  findnodedialog.h  findnodedialog.ui  guilogsink.cpp  guilogsink.h  guimodelloader.cpp  guimodelloader.h  logupdaterthread.cpp  logupdaterthread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newsimulationdialog.cpp  newsimulationdialog.h  newsimulationdialog.ui  nodeitem.cpp  nodeitem.h  nodeparametersdialog.cpp  nodeparametersdialog.h  nodeparametersdialog.ui  portitem.cpp  portitem.h  renamenodedialog.cpp  renamenodedialog.h  renamenodedialog.ui  saveasdialog.cpp  saveasdialog.h  saveasdialog.ui  simulationsaver.cpp  simulationsaver.h  simulationscene.cpp  simulationscene.h  (+8 more)
src/gui/commands/: addconnection.cpp  addconnection.h  addnode.cpp  addnode.h  changeparameters.cpp  changeparameters.h  changetime.cpp  changetime.h  deleteconnection.cpp  deleteconnection.h  deletenode.cpp  deletenode.h  nodemove.cpp  nodemove.h  renamenode.cpp  renamenode.h
src/nodes/: CMakeLists.txt  arrayparamtest.cpp  arrayparamtest.h  bufferednodeconnection.cpp  bufferednodeconnection.h  catchmentbwmcss.cpp  catchmentbwmcss.h  catchmentcss.cpp  catchmentcss.h  constsource.cpp  constsource.h  cso.cpp  cso.h  cyclenodeend.cpp  cyclenodeend.h  cyclenodestart.cpp  cyclenodestart.h  defaultsimulation.cpp  defaultsimulation.h  dwf.cpp  dwf.h  fileout.cpp  fileout.h  flowread.cpp  flowread.h  flowreadcontext.cpp  flowreadcontext.h  flowreadsimple.cpp  flowreadsimple.h  flowtypefactory.cpp  impuls.cpp  impuls.h  ixxqbuffer.cpp  ixxqbuffer.h  ixxqread.cpp  ixxqread.h  ixxrainread.cpp  ixxrainread.h  ixxrainread_v2.cpp  ixxrainread_v2.h  (+50 more)
src/nodes/muparser/: CMakeLists.txt  Changes.txt  muParserBytecode.cpp
src/nodes/qs/: qs.pri  qswnode.h  statemigrator.cpp  statemigrator.h
src/python/: CMakeLists.txt  module.cpp  module.h  pycontroller.cpp  pycontroller.h  pyflow.cpp  pyflow.h  pymodel.cpp  pymodel.h  pynode.cpp  pynode.h  pyptime.cpp  pyptime.h  pysimulation.cpp  pysimulation.h  python.pri  python.pro  pythonnodefactory.cpp  pythonnodefactory.h
src/python-swig/: CMakeLists.txt  pycd3.i  testnodes.py
test/: CMakeLists.txt  main.cpp  test.pro  testnode.cpp  testnode.h
(+157 files in other folders)
