add_executable(cd3 main.cpp)
include_directories (${CD3_SOURCE_DIR}/cd3core)
include_directories (${CD3_SOURCE_DIR}/3rdparty/boost_1_38_0)
target_link_libraries(cd3 cd3core)
link_directories($(CD3_BINARY_DIR)/cd3core/ ${CD3_SOURCE_DIR}/3rdparty/boost_1_38_0/stage/lib)
set(QT_NOTUSE_QTGUI true)
set(QT_USE_QTXML true)
add_definitions(-DQT_NO_KEYWORDS)
include(${QT_USE_FILE})
target_link_libraries(cd3 ${QT_LIBRARIES} boost_signals boost_thread-mt boost_program_options)
set(EXECUTABLE_OUTPUT_PATH ${CD3_SOURCE_DIR})
