file(GLOB_RECURSE CPP_FILES ./ *.cpp)

message(STATUS ${CMAKE_BINARY_DIR})
include_directories(${PYTHON_INCLUDE_DIR} ${CMAKE_BINARY_DIR})
add_library(cd3core SHARED ${CPP_FILES})

TARGET_LINK_LIBRARIES(cd3core ${QT_LIBRARIES} ${Boost_SYSTEM_LIBRARY} ${Boost_SIGNALS_LIBRARY} ${Boost_DATE_TIME_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})

if(WITH_PYTHON)
	target_link_libraries(cd3core ${PYTHON_LIBRARIES})
endif(WITH_PYTHON)

INSTALL(TARGETS cd3core
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib)
