file(GLOB_RECURSE CPP_FILES ./ *.cpp)
add_library(pycd3 SHARED ${CPP_FILES})
include_directories(${PYTHON_INCLUDE_PATH})
#message(STATUS  ${Python_LIBRARIES} ${Boost_LIBRARIES})
TARGET_LINK_LIBRARIES(pycd3 ${PYTHON_LIBRARIES} cd3core ${Boost_PYTHON_LIBRARY})

#INSTALL(TARGETS pycd3
#  LIBRARY DESTINATION lib
#)
